# hdev

./: README.md  build.hl
source-code/: Cargo.toml  index.html  package.json  vite.config.ts
source-code/src/: App.tsx  app.rs  autocomplete.rs  config.rs  editor.rs  filetree.rs  highlight.rs  keybinds.rs  languages.rs  main.rs  marketplace.rs  plugins.rs  terminal_panel.rs  ui.rs  utils.rs  welcome.rs
source-code/src-tauri/: Cargo.toml  tauri.conf.json
source-code/src-tauri/src/: lib.rs  main.rs  state.rs
source-code/src-tauri/src/commands/: config.rs  fs.rs  marketplace.rs  mod.rs  plugins.rs  terminal.rs
source-code/src/components/CommandPalette/: CommandPalette.tsx
source-code/src/components/Editor/: Editor.tsx
source-code/src/components/FileTree/: FileTree.tsx  TreeNode.tsx
source-code/src/components/Layout/: HelpOverlay.tsx  TitleBar.tsx
source-code/src/components/Marketplace/: Marketplace.tsx  PluginsPanel.tsx
source-code/src/components/Settings/: Settings.tsx
source-code/src/components/Sidebar/: ActivityBar.tsx  SearchPanel.tsx  Sidebar.tsx
source-code/src/components/StatusBar/: StatusBar.tsx
source-code/src/components/TabBar/: TabBar.tsx
source-code/src/components/Terminal/: Terminal.tsx
source-code/src/components/Welcome/: Welcome.tsx
source-code/src/hooks/: useGlobalHotkeys.ts
source-code/src/lib/: ipc.ts
source-code/src/stores/: editorStore.ts  settingsStore.ts  terminalStore.ts  uiStore.ts
source-code/src/styles/: cmTheme.ts  global.css  themes.css
source-code/src/types/: index.ts
source-code/src/utils/: cmLanguage.ts  language.ts
(+1 files in other folders)
