[package]
name = "hdev"
version = "0.1.0"
edition = "2021"
authors = ["HackerOS Team <hackeros068@gmail.com>"]
description = "hdev — TUI code editor for HackerOS, inspired by VSCode"
license = "MIT"

[[bin]]
name = "hdev"
path = "src/main.rs"

[dependencies]
ratatui = { version = "0.29", features = ["all-widgets"] }
crossterm = { version = "0.28", features = ["event-stream"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
dirs = "5.0"
walkdir = "2"
once_cell = "1.19"
unicode-width = "0.1"
fuzzy-matcher = "0.3"
chrono = { version = "0.4", features = ["serde"] }
