[package]
name = "hdev"
version = "0.2.0"
description = "hdev — TypeScript + React + Tauri code editor / notatnik dla HackerOS"
authors = ["HackerOS Team <hackeros068@gmail.com>"]
license = "MIT"
edition = "2021"
rust-version = "1.75"

[lib]
name = "hdev_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
directories = "5.0"
reqwest = { version = "0.12", features = ["rustls-tls"], default-features = false }
tokio = { version = "1", features = ["process", "io-util", "rt", "rt-multi-thread", "macros", "fs"] }

[features]
custom-protocol = ["tauri/custom-protocol"]
